--- a/src/assets/style/reset.css
+++ b/src/assets/style/reset.css
@@ -12,9 +12,11 @@ body,h1,h3,h2,h4,h5,h6,p,dl,dd,ul,li,ol,td,form,input,fieldset,legend{
 li{list-style:none;}
 
 a{text-decoration:none; font-size:12px; color:#5c5c5c;}
-
+html{
+	font-size:50px;
+}
 body{
-	font-size:50px; 
+	font-size:14px;
 	font-family:"微软雅黑"; 
 	color:#666; 
 	background:#fff;
